# install-rez-packages-action

./: .gitignore  README.md  action.yml  install_rez_packages.py  pyproject.toml  tox.ini
.github/workflows/: tests.yml  update-action-tag.yml
tests/: test_install_rez_packages.py
tests/data/: other.txt  requirements.txt  test_pyproject.toml
