[project]
name = "install_rez_packages_action"

dependencies = [
    "gitpython",
    "tomlkit"
]

[dependency-groups]
    deps = ["gitpython", "tomlkit"]
    docstrings = ["pydocstringformatter"]
    github = ["coverage", "tox"]
    isort = ["isort"]
    mypy = ["mypy[toml]"]
    ruff = ["ruff"]
    test = ["pytest", "pytest-cov", "pytest_datadir", "pytest-houdini", "pytest-mock", "pytest-subprocess"]
    test_install_deps = ["markdown-pytest"]

[tool.tox]
    env_list = ["run-tests", "ruff-check", "ruff-format-check", "isort-check", "mypy", "docstring-check"]
    labels = {test = ["run-tests"], static = ["ruff-check", "ruff-format-check", "isort-check", "mypy", "docstring-check"], fix = ["ruff-format-fix", "isort-run", "docstring-run"] }
    no_package = true

    [tool.tox.env.run-tests]
        allowlist_externals = ["echo"]
        dependency_groups = ["deps", "test"]
        set_env = {PYTHONPATH = "{toxinidir}:{envsitepackagesdir}"}
        commands = [["pytest", "tests/"]]
        commands_post = [["echo", "View test coverage report at file://{toxinidir}/coverage_html_report/index.html"]]

    [tool.tox.env.ruff-check]
        dependency_groups = ["ruff"]
        commands = [[ "ruff", "check", "--preview", "install_rez_packages.py", "tests/"]]

    [tool.tox.env.ruff-format-check]
        dependency_groups = ["ruff"]
        commands = [[ "ruff", "format", "--preview", "--check", "--diff", "install_rez_packages.py", "tests/"]]

    [tool.tox.env.ruff-format-fix]
        dependency_groups = ["ruff"]
        commands = [[ "ruff", "format", "--preview", "install_rez_packages.py", "tests/"]]

    [tool.tox.env.isort-check]
        dependency_groups = ["isort"]
        commands = [[ "isort", "--check", "install_rez_packages.py", "tests/"]]

    [tool.tox.env.isort-run]
        dependency_groups = ["isort"]
        commands = [[ "isort", "install_rez_packages.py", "tests/"]]

    [tool.tox.env.mypy]
        dependency_groups = ["deps", "mypy"]
        commands = [[ "mypy"]]

    [tool.tox.env.docstring-check]
        dependency_groups = ["docstrings"]
        commands = [[ "pydocstringformatter", "--exit-code", "install_rez_packages.py"]]

    [tool.tox.env.docstring-run]
        dependency_groups = ["docstrings"]
        commands = [[ "pydocstringformatter", "--write", "install_rez_packages.py"]]

[tool.pytest]
    addopts = ["--cov", "--cov-report=html", "--cov-report=xml", "--cov-fail-under=100", "--color=yes"]

[tool.isort]
    profile = "black"
    src_paths = ["."]
    sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
    import_heading_future = "Future"
    import_heading_stdlib = "Standard Library"
    import_heading_thirdparty = "Third Party"
    import_heading_firstparty = "install-rez-packages-action"
    dedup_headings = true
    indented_import_headings = false

[tool.mypy]
    disallow_incomplete_defs = true
    disallow_untyped_calls = true
    disallow_untyped_defs = true
    files = "install_rez_packages.py"


[tool.coverage]

    [tool.coverage.run]
        branch = true
        source =  ["install_rez_packages"]
        omit = [
            "*version.py",
        ]
        disable_warnings = [
            "module-not-imported",
            "module-not-measured",
        ]

    [tool.coverage.report]
        exclude_lines = [
            # Have to re-enable the standard pragma
            "pragma: no cover",
            "def __repr__",
            "if TYPE_CHECKING",
            "if __name__ == .__main__.:",
        ]
        ignore_errors = true
        skip_empty = true

    [tool.coverage.html]
        directory = "coverage_html_report"

[tool.pydocstringformatter]
    max-summary-lines = 2
    max-line-length = 120

[tool.ruff]
    line-length = 120

    [tool.ruff.lint]
        extend-select = [
            "E",  # pycodestyle
            "W",  # pycodestyle
            "UP", # pyupgrade
            "D",  # pydocstyle
            "F",  # Pyflakes
            "PL",  # Pylint
            "RSE",  # flake8-raise
            "B",  # flake8-bugbear
            "PT",  #  flake8-pytest-style
            "C90",  #  mccabe
            "TRY",  #  tryceratops
            "FLY",  #  flynt
            "PERF",  #  Perflint
            "LOG",  #  flake8-logging
            "BLE",  # flake8-blind-except
            "A",  # flake8-builtins
            "C4",  # flake8-comprehensions
            "RET",  # flake8-return
            "SIM",  # flake8-simplify
            "TCH",  # flake8-type-checking
            "PTH",  # flake8-use-pathlib
            "RUF",  # Ruff specific
            "FBT",  # flake8-boolean-trap
            "FURB",  # refurb
            "PYI",  # flake8-pyi
        ]
        ignore = [
            "D107",  # Missing docstring in __init__
            "TRY003",  # Long exception messages
        ]

    [tool.ruff.lint.per-file-ignores]
        "tests/*.py" = [
            "FBT003",  # Boolean positional
            "PLR0913",  # Too many arguments in function definition
            "PLR0917",  # Too many positional arguments
            "PLR2004",  # Magic value in comparison
            "PLR6301",  # 'no-self-use' for tests
            "PT006",  # Expected tuple of parameter names instead of string
            "PT007",  # Expected `list` instead of `tuple` for parametrized fixtures
            "PT012",  # pytest.raises() simple statement
            "TRY003",  # Long exception messages
        ]

    [tool.ruff.lint.flake8-pytest-style]
        fixture-parentheses = false  # Match actual pytest recommendation with no parentheses

    [tool.ruff.lint.pydocstyle]
        convention = "google"

    [tool.ruff.lint.pylint]
        max-args = 6
